--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,7 +25,7 @@
     {{ content }}
 
     <footer style="text-align: center; padding: 50px; color: var(--text-sub);">
-        <p>&copy; 2026 Space Blog Design.</p>
+        <p>&copy; kaiversus_52Hz</p>
     </footer>
 
 </body>
