--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,10 +14,10 @@
 
     <div class="container">
         <header>
-            <div class="logo">CYTHULIU</div> <nav>
+            <div class="logo">KAIVERSUS BLOG</div> <nav>
                 <a href="/">Trang chủ</a>
                 <a href="/about">Giới thiệu</a>
-                <a href="#" class="btn-cta">Kết nối ngay</a>
+                <a href="#" class="btn-cta">Write up</a>
             </nav>
         </header>
     </div>
