--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,8 +17,8 @@
         <header>
             <div class="logo">KAIVERSUS BLOG</div> <nav>
                 <a href="/">Trang chủ</a>
-                <a href="/about">Giới thiệu</a>
-                <a href="#" class="btn-cta">Write up</a>
+                <a href="/about/">Identity</a> 
+                <a href="#writeups" class="btn-cta">Write up</a>
             </nav>
         </header>
     </div>
@@ -54,6 +54,5 @@
     }());
 </script>
 <script src="{{ "/assets/js/cyber-bg.js" | relative_url }}"></script>
-
 </body>
 </html>
