--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,11 +15,11 @@
 
     <div class="container">
         <header>
-            <div class="logo">KAIVERSUS BLOG</div> <nav>
+            <div class="logo">KAIVERSUS BLOG</div>
+            <nav>
                 <a href="/">Trang chủ</a>
                 <a href="/about/">Identity</a> 
-                <a href="#writeups" class="btn-cta">Write up</a>
-            </nav>
+                <a href="#writeups">Write up</a> </nav>
         </header>
     </div>
 
