--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,13 +13,14 @@
 
 <body>
 
-    <div class="container">
+    <div class="container" style="padding-top: 5px; padding-bottom: 5px;">
         <header>
-            <div class="logo">KAIVERSUS BLOG</div>
+            <div class="logo">KAIVERSUS BLOG</div> 
             <nav>
                 <a href="/">Trang chủ</a>
                 <a href="/about/">Identity</a> 
-                <a href="#writeups">Write up</a> </nav>
+                <a href="#writeups">Write up</a>
+            </nav>
         </header>
     </div>
 
