--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -63,9 +63,9 @@ body {
 
 /* --- CÁC KHỐI CHUNG --- */
 .container {
-    padding-top:10px !important;    /* Xóa đệm trên */
-    padding-bottom: 10px !important; /* Xóa đệm dưới */
-    max-width: 100% !important;   /* Cho rộng full màn hình nếu muốn */
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 10px;
 }
 
 /* --- TYPOGRAPHY (CHỮ) --- */
@@ -182,7 +182,7 @@ header {
 /* --- LOGO STYLE --- */
 .logo {
     font-family: 'Orbitron', sans-serif; /* Font robot góc cạnh */
-    font-size: 1.7rem !important;        /* Chữ to nổi bật */
+    font-size: 2.2rem !important;        /* Chữ to nổi bật */
     font-weight: 900;
     padding: 30px;
     color: #fff;                         /* Màu trắng chủ đạo */
@@ -211,7 +211,7 @@ nav {
 
 nav a {
     font-family: 'Orbitron', sans-serif; /* Dùng chung font góc cạnh */
-    font-size: 1rem !important;
+    font-size: 1.1rem !important;
     font-weight: 700 !important;
     color: #888; /* Màu xám nhạt mặc định cho đỡ chói */
     text-decoration: none;
