--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -474,7 +474,7 @@ html {
     font-size: 6px;      /* Cực nhỏ để vừa khung hình */
     line-height: 6px;    /* Ép dòng lại cho khít */
     font-weight: 900;    /* Đậm lên cho rõ nét */
-    color: var(--primary); /* Màu xanh neon chủ đạo */
+    color: var(--accent); /* Màu hồng neon chủ đạo */
     
     /* Hiệu ứng phát sáng */
     text-shadow: 0 0 5px var(--primary);
