--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -473,7 +473,8 @@ html {
     font-family: 'Courier New', monospace; /* Bắt buộc dùng font monospace để thẳng hàng */
     font-size: 6px;      /* Cực nhỏ để vừa khung hình */
     line-height: 6px;    /* Ép dòng lại cho khít */
-    font-weight: 900;    /* Đậm lên cho rõ nét */ /* Màu hồng neon chủ đạo */
+    font-weight: 900;    /* Đậm lên cho rõ nét */
+    color: var(--accent); /* Màu hồng neon chủ đạo */
     
     /* Hiệu ứng phát sáng */
     text-shadow: 0 0 5px var(--primary);
@@ -486,10 +487,10 @@ html {
     padding-left: 0;  /* Đảm bảo không có đệm trái */
     text-align: left; /* Căn trái tuyệt đối */
     /* Gradient màu (Tùy chọn: Nếu muốn màu chạy từ Xanh sang Đỏ) */
-    background: linear-gradient(90deg, var(--primary), var(--accent));
+    /* background: linear-gradient(90deg, var(--primary), var(--accent));
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent; 
-   
+    */
 }
 
 /* Ẩn ASCII art trên điện thoại vì màn hình nhỏ sẽ bị vỡ */
